--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import url("../assets/styles/fonts.css"); */
+/* @import url("../assets/styles/fonts.css");  */
 
 * {
   margin: 0;
@@ -19,8 +19,8 @@
   --mainTransition: all 0.3s linear;
   --mainRed: #db2777;
   --bodyColor: #f6f6f6;
-  --nav-width: 250px;
-}
+  --nav-width: 350px;
+} 
 
 body {
   font-family: "iranyekan";
@@ -41,7 +41,7 @@ body {
   top: 0;
   right: 0;
   border-radius: 0 100px 0 0;
-  background: linear-gradient(180deg, #324467, #283142);
+  background: linear-gradient(180deg, #2455b7, #191e27);
   display: flex;
   flex-direction: column;
   transition: all 0.3s ease-out;
@@ -87,7 +87,7 @@ body {
 }
 
 .notes__small-title {
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 
 .notes__small-body {
@@ -163,3 +163,4 @@ body {
   align-items: center;
   color: var(--mainRed);
 }
+
